Update the refresh token and authentication phase, there are still many bugs@@